feat(users): :sparkles: implement repository layer with postgres
