# docs/swagger.yaml
@@ -1,5 +1,55 @@
 basePath: /api/v1
 definitions:
+  delivery.CreatePayload:
+    properties:
+      birthdate:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      last_name:
+        type: string
+      password_hash:
+        type: string
+      username:
+        type: string
+    type: object
+  delivery.ListResponse:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/delivery.Response'
+        type: array
+      total:
+        type: integer
+    type: object
+  delivery.Response:
+    properties:
+      birthdate:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      id:
+        type: string
+      last_name:
+        type: string
+      username:
+        type: string
+    type: object
+  delivery.UpdatePayload:
+    properties:
+      email:
+        type: string
+      first_name:
+        type: string
+      last_name:
+        type: string
+      username:
+        type: string
+    type: object
   shareddtos.ErrResponse:
     properties:
       dev_message:
@@ -12,50 +62,6 @@ definitions:
   shareddtos.IdResponse:
     properties:
       id:
-        type: string
-    type: object
-  users.CreatePayload:
-    properties:
-      birthdate:
-        type: string
-      first_name:
-        type: string
-      last_name:
-        type: string
-      password:
-        type: string
-      username:
-        type: string
-    type: object
-  users.ListResponse:
-    properties:
-      items:
-        items:
-          $ref: '#/definitions/users.Response'
-        type: array
-      total:
-        type: integer
-    type: object
-  users.Response:
-    properties:
-      birthdate:
-        type: string
-      first_name:
-        type: string
-      id:
-        type: string
-      last_name:
-        type: string
-      username:
-        type: string
-    type: object
-  users.UpdatePayload:
-    properties:
-      first_name:
-        type: string
-      last_name:
-        type: string
-      username:
         type: string
     type: object
 info:
@@ -88,7 +94,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/users.ListResponse'
+            $ref: '#/definitions/delivery.ListResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -106,7 +112,7 @@ paths:
         name: paquete
         required: true
         schema:
-          $ref: '#/definitions/users.CreatePayload'
+          $ref: '#/definitions/delivery.CreatePayload'
       produces:
       - application/json
       responses:
@@ -168,7 +174,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/users.Response'
+            $ref: '#/definitions/delivery.Response'
         "400":
           description: Bad Request
           schema:
@@ -195,7 +201,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/users.UpdatePayload'
+          $ref: '#/definitions/delivery.UpdatePayload'
       produces:
       - application/json
       responses:
